[package]
name = "cw-lottery"
version = "1.0.0"
edition = "2018"
license = "Apache-2.0"
description = "Gelotto IBC Lottery CosmWasm Smart Contract"
repository = "https://github.com/dgabriele/cw-contract.git"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.1.1"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = { version = "1.0.1" }
schemars = "0.8.1"
thiserror = "1.0.38"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
sha2 = "0.10.2"
base64ct = "1.5.0"

[dev-dependencies]
cosmwasm-schema = "1.2.1"
